Add github actions, add zip file loading