@@ -1,9 +1,10 @@
 plugins {
     id 'application'
+    id "org.beryx.jlink" version "2.22.3"
 }
 
 group 'com.opengg'
-version '0.0.1'
+version '0.1'
 
 sourceCompatibility = 1.15
 targetCompatibility = 1.15
@@ -17,14 +18,6 @@ java {
 compileJava {
     options.incremental = true
     options.fork = true
-}
-
-sourceSets {
-    main {
-        java {
-            srcDirs = ['src']
-        }
-    }
 }
 
 tasks.withType(JavaCompile) {
@@ -51,13 +44,45 @@ application  {
 
 ext.os = org.gradle.internal.os.OperatingSystem.current()
 
-ext.artifactName = 'TTMM'
+ext.artifactName = 'TTModManager'
+
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher{
+        name = artifactName
+        jvmArgs = ['--enable-preview']
+        //unixScriptTemplate = file('unixTemplate.txt')
+       // windowsScriptTemplate = file('windowsTemplate.txt')
+    }
+    jpackage {
+        if(os.windows) {
+            installerOptions = ['--win-per-user-install', '--win-dir-chooser', '--win-menu']
+        } else {
+            installerType = 'deb' // 'rpm'
+        }
+        installerOptions += '--verbose'
+
+        //icon = 'dist\\resources\\tex\\icon.ico'
+    }
+}
+
+task packageDistribution(type: Zip) {
+    archiveFileName = artifactName + ".zip"
+    destinationDirectory = file("$buildDir/dist")
+
+    from("$buildDir/jpackage/")
+}
+
+tasks.jlink.finalizedBy(packageDistribution)
+
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation 'net.lingala.zip4j:zip4j:2.6.4'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
